--- a/ngramTest.html
+++ b/ngramTest.html
@@ -1,6 +1,13 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script type="text/javascript">
 
+    function displayXML(xml){
+
+     $(xml).find('NgramItem').each(function() {
+        $('#displayBox').append("<p>" + $(this).children('frequency').text() + " " + $(this).children('Ngram').text() + "</p>");
+});
+        }
+
     $(document).ready(function() {
 
         $("#ngramForm").submit(function(event) {
@@ -11,40 +18,26 @@
  /* get some values from elements on the page: */
         var $form = $( this ),
         locationURL = $form.find( 'input[name="locationURL"]' ).val(),
-
         folder = $form.find( 'input[name="folder"]').val(),
         ngRange = $form.find( 'input[name="ngRange"]').val(),
         statOperation = $form.find( 'input[name="statOperation"]').val(),
         format = $form.find( 'input[name="Format"]').val();
 
-        sendToServer(locationURL, folder, ngRange, statOperation, format, serverResults);
+    $.ajax({
+        type: "GET",
+        url: "sampleXmlDoc.xml",
+        dataType: "xml",
+        success: displayXML
+        });
 
         });
     });
-
-    function serverResults(o)
-    {
-
-            var xml = $.parseXML(o.text);
-            var error = $(xml).find('error');
-    if (error && error.length) {
-      $('#displayBox').html($(error).attr('message'));
-
-            }
-        else
-        {
-            $('#displayBox').html($(xml).find('ArrayOfString').text());
-        }
-
-
-    }
-
 </script>
 <body>
 <form id="ngramForm">
-    <label for="locationURL">URL Location</label><input id="locationURL" name="locationURL" type="text" value="http://www.jeffreycwitt.com/plaoul/translation_english/trans_engl_prollecture1.xml"/><br/>
-    <label for="folder">directory folder</label><input id="folder" name="folder" type="text"/><br/>
-    <label for="ngRange">N-Gram Range</label><input id="ngRange" name="ngRange" type="text"/><br/>
+    <label for="locationURL">URL Location</label><input id="locationURL" name="locationURL" type="text"/><br/>
+    <label for="folder">N-Gram Length</label><input id="folder" name="folder" type="text"/><br/>
+    <label for="ngRange">Collocation Span</label><input id="ngRange" name="ngRange" type="text"/><br/>
     <label for="statOperation">Stat Operation</label><input id="statOperation" name="statOperation" type="text"/><br/>
     <label for="Format">Output Format</label><input id="Format" name="Format" type="text"/><br/>
     <input value="Run Ngram" type="submit"/>
